@@ -219,6 +219,7 @@ class rcube_json_output
      */
     public function send()
     {
+      sleep(6);
         $this->remote_response();
         exit;
     }
